// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copies runtime props 1`] = `
Object {
  "insertions": Object {
    "declarations": Array [
      "const Foo_$ = styled_$.div\`\`;",
    ],
    "imports": Array [
      "import styled_$ from 'styled-components';",
    ],
  },
  "jsx": "<Foo_$ style={{\\"backgroundColor\\":\\"red\\"}}
 date={1559042696688}
 value={\\"fopobar\\"}
 content={null}>{\\"foobar\\"}</Foo_$>",
}
`;

exports[`copies runtime props with multiple children 1`] = `
Object {
  "insertions": Object {
    "declarations": Array [
      "const Foo_$ = styled_$.div\`\`;",
    ],
    "imports": Array [
      "import styled_$ from 'styled-components';",
    ],
  },
  "jsx": "<Foo_$ style={{\\"backgroundColor\\":\\"red\\"}}
 date={1559042696688}
 value={\\"fopobar\\"}
 content={null}>
        {\\"foobaring\\"}{1}
      </Foo_$>",
}
`;

exports[`copies runtime props with single children 1`] = `
Object {
  "insertions": Object {
    "declarations": Array [
      "const Foo_$ = styled_$.div\`\`;",
    ],
    "imports": Array [
      "import styled_$ from 'styled-components';",
    ],
  },
  "jsx": "<Foo_$ style={{\\"backgroundColor\\":\\"red\\"}}
 date={1559042696688}
 value={\\"fopobar\\"}
 content={null}>{2}</Foo_$>",
}
`;

exports[`handle imports path 1`] = `
Object {
  "insertions": Object {
    "imports": Array [
      "import Button_$ from ../../../../../index.ts;",
    ],
  },
  "jsx": "<Button_$>Click Me</Button_$>",
}
`;

exports[`handle named as imports 1`] = `
Object {
  "insertions": Object {
    "imports": Array [
      "import { Button as Button_$1 } from 'Button';",
    ],
  },
  "jsx": "<Button_$1>Click Me</Button_$1>",
}
`;

exports[`handle named imports 1`] = `
Object {
  "insertions": Object {
    "imports": Array [
      "import { Button as Button_$ } from 'Button';",
    ],
  },
  "jsx": "<Button_$>Click Me</Button_$>",
}
`;

exports[`should work 1`] = `
Object {
  "insertions": Object {
    "declarations": Array [
      "const Button_$1 = styled_$1.button\`
  color: red;
\`;",
      "const color_$ = 'blue';",
      "const Button_$ = styled_$.button\`
  color: \${color_$};
\`;",
    ],
    "imports": Array [
      "import * as styled_$1 from 'styled';",
      "import * as styled_$ from 'styled';",
    ],
  },
  "jsx": "<div>
    <p>Source</p>
    <input value=\\"foo\\" />
    <Button_$>Click Me</Button_$>
    <Button_$1>Click Me 2</Button_$1>
  </div>",
}
`;
